fixed horizontal scroll

--- a/loic.css
+++ b/loic.css
@@ -108,8 +108,8 @@ a:hover{
 body{
 	margin: 0px;
 	padding: 0px;
-	min-width:600px;
-	min-height: 400px;
+	overflow-x: hidden;
+	max-width: 100%;
 	
 }
 .navbar{
